- Add support for activities stored as new segment type 0xE9 (Graham)
- Update digitmaps.bin to 659 (Dave Reed, Graham)
- Add new parameter BlockFormat to RDF [General] section (Graham)
-- Private build 7
- Update build process from using Java 6 to using Java 7 (Graham)
- Allow segmented remotes to have no type 00 segments (Graham)
- Update digitmaps.bin to 660 (Dave Reed, Graham)
- Private build 8
- Add support for writing settings.bin file to SimpleSet remotes on Linux operating system (tidklass, Marcin)
- Rewrite detection of SimpleSet remote on Linux operating system (Marcin)
- Correctly obtain the byte index for a TI2541 executor of the byte that contains the number of fixed and command bytes (Dave Reed)
- Add learned format == 2 to handle learns from TI2541 (Dave Reed)
- Distinguish between JP2 and JP2N formats, the latter having a block structure for its entire flash (Graham)
- Fix bug introduced in build 6 preventing XSight remotes from displaying correctly (Graham)
- Include new file linux_xsight.rules in distribution for use in Linux systems (Graham, mdavej, Barf)
- Fix bug causing the ModeName special function not to work correctly (Graham)
- Update ReadMe to specify need for Java 7 rather than Java 6 and to explain the linux_xsight.rules file (Graham)

Changes for v2.03
-- Alpha 8 --
- Add support for XSight Lite and ARRX12G, remotes that have a direct USB interface.
- Note that Alphas prior to Alpha 8 were not uploaded to the SVN and were early stages in this development.
- An updated version of jp12serial, not yet publicly released, is needed to access this new support.  
-- Alpha 9 --
- Fix bug in Alpha 8 that caused downloading to hang if no Favorites are set.
-- Alpha 10 --
- Change reading of USB port for XSight remotes to use javahidapi rather than modified jp12serial (3FG)
- Change form of signature for XSight remotes to be "USB" + PID value returned by HID interface (Graham)